# akarisub

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile_licence  README.md  THIRD_PARTY_NOTICES.md  build.ts  functions.mk  index.d.ts  jsr.json  mise.toml  package.json  tsconfig.json  vite.build.js
.github/workflows/: build.yml
assets/: fonts.conf
crates/akarisub-native/: Cargo.toml  build.rs
crates/akarisub-native/src/: lib.rs
crates/brotli-sys/: Cargo.toml  build.rs
crates/brotli-sys/src/: lib.rs
crates/build-support/: Cargo.toml
crates/build-support/src/: lib.rs
crates/expat-sys/: Cargo.toml  build.rs
crates/expat-sys/src/: lib.rs
crates/fontconfig-sys/: Cargo.toml  build.rs
crates/fontconfig-sys/src/: lib.rs
crates/freetype-sys/: Cargo.toml  build.rs
crates/freetype-sys/src/: lib.rs
crates/fribidi-sys/: Cargo.toml  build.rs
crates/fribidi-sys/src/: lib.rs
crates/harfbuzz-sys/: Cargo.toml  build.rs
crates/harfbuzz-sys/src/: lib.rs
crates/libass-sys/: Cargo.toml  build.rs
crates/libass-sys/src/: lib.rs
src/: AkariSub.cpp  JASSUB.cpp  compat.ts  index.ts  jassub.js  lib.rs  pkg-akarisub.d.ts  post-worker.js  pre-worker.js  syscall-stubs.js  worker.js  wrapper.ts
src/ts/: akarisub.ts  async-renderer.ts  browser-renderer.ts  jassub.ts  renderer.ts  types.ts  utils.ts  wasm.ts  webgl2-renderer.ts  webgpu-renderer.ts  worker-client.ts  worker-types.ts  worker.ts
