[package]
name = "akarisub-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Project-specific native integration layer for AkariSub"

[dependencies]
akarisub-brotli-sys = { path = "../brotli-sys" }
akarisub-expat-sys = { path = "../expat-sys" }
akarisub-fontconfig-sys = { path = "../fontconfig-sys" }
akarisub-freetype-sys = { path = "../freetype-sys" }
akarisub-fribidi-sys = { path = "../fribidi-sys" }
akarisub-harfbuzz-sys = { path = "../harfbuzz-sys" }
akarisub-libass-sys = { path = "../libass-sys" }
libc = "0.2"