[package]
name = "akarisub-brotli-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings for Brotli used by AkariSub"

[lib]
name = "akarisub_brotli_sys"

[build-dependencies]
akarisub-build-support = { path = "../build-support" }
cc.workspace = true