[package]
name = "akarisub-expat-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings for Expat used by AkariSub"
links = "akarisub_expat"

[lib]
name = "akarisub_expat_sys"

[build-dependencies]
akarisub-build-support = { path = "../build-support" }
cc.workspace = true