[package]
name = "akarisub-fontconfig-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings for Fontconfig used by AkariSub"
links = "akarisub_fontconfig"

[lib]
name = "akarisub_fontconfig_sys"

[build-dependencies]
akarisub-build-support = { path = "../build-support" }
cc.workspace = true