[package]
name = "akarisub-fribidi-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings for FriBidi used by AkariSub"
links = "akarisub_fribidi"

[lib]
name = "akarisub_fribidi_sys"

[build-dependencies]
akarisub-build-support = { path = "../build-support" }
cc.workspace = true